--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
             <p class="mb-5 text-primary">
                 I am very grateful to have mentors and collaborators with whom I have the honor to work on various
                 interesting problems spanning
-                <span style="color: blue;"> neuroscience (NS)</span>,
-                <span style="color: red;">machine learning (ML)</span>,
-                <span style="color: chocolate;"> computer vision (CV)</span>,
-                <span style="color: purple;"> geometric/topological inference (GT)</span>,
-                <span style="color: forestgreen;"> systems biology/genomics (SB)</span>,
-                <span style="color: violet;"> speech processing (SP)</span>,
-                <span style="color: teal;"> applied mathematics (AM)</span>,
-                <span style="color: brown;"> human-computer interaction (HCI)</span>,
-                <span style="color: orange;"> information theory (IT)</span>,
-                and <span style="color: salmon;"> translational medicine/psychiatry (TM) </span>.
+                <span style="color: blue;"> neuroscience &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>,
+                <span style="color: red;">machine learning &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>,
+                <span style="color: chocolate;"> computer vision &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>,
+                <span style="color: purple;"> geometric/topological inference &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>,
+                <span style="color: forestgreen;"> systems biology/genomics &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>,
+                <span style="color: violet;"> speech processing &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid violet;">SP</span>,
+                <span style="color: teal;"> applied mathematics &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid teal;">AM</span>,
+                <span style="color: brown;"> human-computer interaction &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span>,
+                <span style="color: orange;"> information theory &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid orange;">IT</span>,
+                and <span style="color: salmon;"> translational medicine/psychiatry &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span>.
                 I also maintain close industrial collaborations with IBM Research and Microsoft Research.
             </p>
 
@@ -134,7 +134,7 @@
                     <td> my own time </td>
                     <td> mostly single-authored </td>
                     <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p20">[20]</a><a href="#p21">[21]</a><a href="#p23">[23]</a><a href="#p24">[24]</a> </td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span>,<span style="border-radius:4px;padding:2px;border:2px solid orange;">IT</span>,<span style="border-radius:4px;padding:2px;border:2px solid purple;">GT</span>,<span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span>,<span style="border-radius:4px;padding:2px;border:2px solid brown;">HCI</span>,<span style="border-radius:4px;padding:2px;border:2px solid violet;">SP</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid orange;">IT</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid violet;">SP</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -142,7 +142,7 @@
                     <td> IBM </td>
                     <td> CompNeuro & AI Foundations Groups</td>
                     <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a><a href="#p19">[19]</a><a href="#p25">[25]</a> </td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span>,<span style="border-radius:4px;padding:2px;border:2px solid purple;">GT</span>,<span style="border-radius:4px;padding:2px;border:2px solid salmon;">TM</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -150,7 +150,7 @@
                     <td> Microsoft </td>
                     <td> EPIC & HCI Groups </td>
                     <td> <a href="#p22">[22]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span>,<span style="border-radius:4px;padding:2px;border:2px solid brown;">HCI</span></td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span></td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -158,7 +158,7 @@
                     <td> Columbia </td>
                     <td> Visual Inference Lab (PI: Kriegeskorte) </td>
                     <td> <a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span>,<span style="border-radius:4px;padding:2px;border:2px solid purple;">GT</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span> </td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -166,7 +166,7 @@
                     <td> </td>
                     <td> Neuro Theory Center (PI: Qian) </td>
                     <td> <a href="#p10">[10]</a><a href="#p21">[21]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span>,<span style="border-radius:4px;padding:2px;border:2px solid purple;">GT</span>,<span style="border-radius:4px;padding:2px;border:2px solid orange;">IT</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid orange;">IT</span> </td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -174,7 +174,7 @@
                     <td> </td>
                     <td> Math Genomics Lab of DSB (PI: Rabadan) </td>
                     <td> <a href="#p13">[13]</a><a href="#p17">[17]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid purple;">GT</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -182,7 +182,7 @@
                     <td> </td>
                     <td> Comp Bio Lab of CS (PI: Pe’er) </td>
                     <td> <a href="#p6">[6]</a>&nbsp;</td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid salmon;">TM</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -190,7 +190,7 @@
                     <td> UW </td>
                     <td> UbiComp Lab of CSE & EE (PI: Patel) </td>
                     <td> </td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid brown;">HCI</span>,<span style="border-radius:4px;padding:2px;border:2px solid red;">ML</span>,<span style="border-radius:4px;padding:2px;border:2px solid salmon;">TM</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span> </td>
                 </tr>
                 <tr>
                     <td> 2015 </td>
@@ -198,7 +198,7 @@
                     <td> </td>
                     <td> Institute for Protein Design (PI: Baker) </td>
                     <td> <a href="#p12">[12]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span> </td>
                 </tr>
                 <tr>
                     <td> 2016 </td>
@@ -206,7 +206,7 @@
                     <td> </td>
                     <td> Biophysics Lab of Applied Math (PI: Qian) &nbsp; &nbsp;</td>
                     <td> </td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid teal;">AM</span>,<span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span></td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid teal;">AM</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span></td>
                 </tr>
                 <tr>
                     <td> 2014 </td>
@@ -214,7 +214,7 @@
                     <td> </td>
                     <td> Vision Neuroscience Lab (PI: Olavarria) </td>
                     <td> <a href="#p2">[2]</a><a href="#p16">[16]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid blue;">NS</span>,<span style="border-radius:4px;padding:2px;border:2px solid chocolate;">CV</span> </td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span> </td>
                 </tr>
                 <tr>
                     <td> 2014 </td>
@@ -222,7 +222,7 @@
                     <td> BIME </td>
                     <td> State Key Lab of Pathogen & Biosecurity </td>
                     <td> <a href="#p1">[1]</a><a href="#p3">[3]</a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span>,<span style="border-radius:4px;padding:2px;border:2px solid teal;">AM</span>,<span style="border-radius:4px;padding:2px;border:2px solid salmon;">TM</span></td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid teal;">AM</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span></td>
                 </tr>
                 <tr>
                     <td> 2013 </td>
@@ -230,7 +230,7 @@
                     <td> BGI </td>
                     <td> Personalized Genome Group </td>
                     <td> </td>
-                    <td> <span style="border-radius:4px;padding:2px;border:2px solid forestgreen;">SB</span>,<span style="border-radius:4px;padding:2px;border:2px solid salmon;">TM</span></td>
+                    <td> <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span></td>
                 </tr>
             </table>
             </p>
