--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <p class="mb-5 text-primary">
                 I am very grateful to have mentors and collaborators with whom I have the honor to work on various
                 interesting problems spanning
-                <span style="color: skyblue;"> neuroscience (NS)</span>,
-<!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>,-->
+                <span style="color: steelblue;"> neuroscience (NS)</span>,
+<!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>,-->
                 <span style="color: tomato;">machine learning (ML)</span>,
 <!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>,-->
                 <span style="color: sandybrown;"> computer vision (CV)</span>,
@@ -117,8 +117,8 @@
 <!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>,-->
                 <span style="color: plum;"> speech processing (SP)</span>,
 <!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:plum;">SP</span>,-->
-                <span style="color: teal;"> applied mathematics (AM)</span>,
-<!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:teal;">AM</span>,-->
+                <span style="color: skyblue;"> applied mathematics (AM)</span>,
+<!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>,-->
                 <span style="color: sienna;"> human-computer interaction (HCI)</span>,
 <!--                <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>,-->
                 <span style="color: orange;"> information theory (IT)</span>,
@@ -129,8 +129,8 @@
             </p>
 
             <p class="mb-5 text-primary">
-            <table align="left" border=1 frame=void rules=rows style="padding:2px;border-radius:4px 4px 0 0;" class="mb-5 text-primary">
-                <tr bgcolor="lightgrey">
+            <table align="left" border=1 frame=void rules=rows class="mb-5 text-primary">
+                <tr bgcolor="lightgrey" style="padding:2px;border-radius:4px 4px 0 0;">
                     <th> From </th>
                     <th> To </th>
                     <th> At </th>
@@ -144,7 +144,7 @@
                     <td> my own time </td>
                     <td> mostly single-authored </td>
                     <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p20">[20]</a><a href="#p21">[21]</a><a href="#p23">[23]</a><a href="#p24">[24]</a> </td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:plum;">SP</span> </td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:plum;">SP</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -152,7 +152,7 @@
                     <td> IBM </td>
                     <td> CompNeuro & AI Foundations Groups</td>
                     <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a><a href="#p19">[19]</a><a href="#p25">[25]</a> </td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -160,7 +160,7 @@
                     <td> Microsoft </td>
                     <td> EPIC & HCI Groups </td>
                     <td> <a href="#p22">[22]</a></td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span></td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span></td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -168,7 +168,7 @@
                     <td> Columbia </td>
                     <td> Visual Inference Lab (PI: Kriegeskorte) </td>
                     <td> <a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span> </td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span> </td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -176,7 +176,7 @@
                     <td> </td>
                     <td> Neuro Theory Center (PI: Qian) </td>
                     <td> <a href="#p10">[10]</a><a href="#p21">[21]</a></td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span> </td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span> </td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
@@ -216,7 +216,7 @@
                     <td> </td>
                     <td> Biophysics Lab of Applied Math (PI: Qian) &nbsp; &nbsp;</td>
                     <td> </td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:teal;">AM</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span></td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span></td>
                 </tr>
                 <tr>
                     <td> 2014 </td>
@@ -224,7 +224,7 @@
                     <td> </td>
                     <td> Vision Neuroscience Lab (PI: Olavarria) </td>
                     <td> <a href="#p2">[2]</a><a href="#p16">[16]</a></td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span> </td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span> </td>
                 </tr>
                 <tr>
                     <td> 2014 </td>
@@ -232,7 +232,7 @@
                     <td> BIME </td>
                     <td> State Key Lab of Pathogen & Biosecurity </td>
                     <td> <a href="#p1">[1]</a><a href="#p3">[3]</a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
-                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:teal;">AM</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span></td>
+                    <td> <span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>&nbsp;<span style="border-radius:2px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span></td>
                 </tr>
                 <tr>
                     <td> 2013 </td>
